	  waiting on a message queue.  task_delete() and pthread_cancel()
	  are dangerous interfaces.  This is only one feeble recover measure
	  of *many* that would be needed to do this safely.
	* sched/group_killchildren.c, task_recover.c, group_foreachchild.c,
	  sched/restart.c, sched/task_delete.c, and others:  Beef up logic
	  to better support task deletion and pthread cancellation.  Needed
	  to pass need OS test case for task_restart().
	* sched/include/sched.h and all timed functions in sched/:  Move
	  timer from local variables to TCB.  This is needed so that if a
	  task is canceled or restarted while it is waiting for a timed
	  event, we can gracefully recover.  We can't let the timer expire
	  after the task has been deleted.
	* arch/arm/include/stm32 and arch/arm/src/stm32:  Add support for
	  the STM32 F3 family (still missing some things).
	* configs/stm32f3discovery:  This will (eventually) be support for
	  the STM32F3Discovery board.
	* STM32 F3 and STM32F3Discovery port is complete a ready for test.
	* arch/arm/src/lpc17xx: Add support for the Cortex-M4 FPU and
	  Mikes "common vector" logic.  The LPC1788 is going to need
	  these things.
	* arch/arm/src/stm32/stm32_spi.c:  Fix SPI DMA logic that does
	  not work if sem_wait() is interrupt by a signal.  From Petteri
	  Aimonen.
	* drivers/input/max11802.c: MAX11802: Fix a timing bug that
	  corrupted coordinates.  From Petteri Aimonen.
	* drivers/mmcsd/mmcsd_spi.c:  Use SPI locking so that MMC/SD can
	  exist on the same bus as other SPI devices.  From Petteri
	  Aimonen.
	* graphics/nxfonts/nxfonts_sans17x22.h: Small mod to hyphen in
	  sans17x22 font.  The hyphen did not have any space on its sides.
	  This caused it to run together with other characters so that for
	  example "+-" would look weird. From Petteri Aimonen.
	* mm/mm_mallinfo.c:  Take MM semaphore in mm_mallinfo. From Petteri
	  Aimonen.
	* configs/stm32f3discovery/nsh/defconfig:  Disable SPI.  It is nto
	  used.