@@ -7,54 +7,59 @@ config MTD_AT24XX
 	default n
 	select I2C
 
+if MTD_AT24XX
+
 config AT24XX_SIZE
 	int "at24xx size(kByte)"
 	default 64
-	depends on MTD_AT24XX
 
 config AT24XX_ADDR
 	hex "at24xx i2c address"
 	default 0x50
-	depends on MTD_AT24XX
-		
+
+endif
+
 config MTD_AT45DB
 	bool "SPI-based AT45DB flash"
 	default n
 	select SPI
-	
+
+if MTD_AT45DB
+
 config AT45DB_FREQUENCY
 	int "at45db frequency"
 	default 1000000
-	depends on MTD_AT45DB
-	
+
 config AT45DB_PREWAIT
 	bool "enables higher performance write logic"
 	default y
-	depends on MTD_AT45DB
 
 config AT45DB_PWRSAVE
 	bool "enables power save"
 	default n
-	depends on MTD_AT45DB
+
+endif
 
 config MTD_MP25P
 	bool "SPI-based M25P FLASH"
 	default n
 	select SPI
 
+if MTD_MP25P
+
 config MP25P_SPIMODE
 	int "MP25P SPI mode"
 	default 0
-	depends on MTD_MP25P
 
 config MP25P_MANUFACTURER
 	hex "MP25P manufacturers ID"
 	default 0x20
-	depends on MTD_MP25P
 	---help---
 		Various manufacturers may have produced the parts.  0x20 is the manufacturer ID
 		for the STMicro MP25x serial FLASH.  If, for example, you are using the a Macronix
 		International MX25 serial FLASH, the correct manufacturer ID would be 0xc2.
+
+endif
 
 config MTD_RAMTRON
 	bool "SPI-based RAMTRON NVRAM Devices FM25V10"
@@ -72,62 +77,78 @@ config MTD_SST25
 	default n
 	select SPI
 
+if MTD_SST25
+
 config SST25_SPIMODE
 	int "SST25 SPI Mode"
 	default 0
-	depends on MTD_SST25
 
 config SST25_SPIFREQUENCY
 	int "SST25 SPI Frequency"
 	default 20000000
-	depends on MTD_SST25
 
 config SST25_READONLY
 	bool "SST25 Read-Only FLASH"
 	default n
-	depends on MTD_SST25
 
 config SST25_SECTOR512
 	bool "Simulate 512 byte Erase Blocks"
 	default n
-	depends on MTD_SST25
 
 config SST25_SLOWWRITE
 	bool
 	default y
-	depends on MTD_SST25
 
 config SST25_SLOWREAD
 	bool
 	default n
-	depends on MTD_SST25
+
+endif
+
+config MTD_SST39FV
+	bool "SST39FV NOR FLASH"
+	default n
+	---help---
+		Selects 16-bit SST NOR FLASH.  This includes support for:
+
+		SST39FV1601/SST39FV1602:  2Mb
+		SST39FV3201/SST39FV3202:  4Mb
+
+if MTD_SST39FV
+
+config SST39VF_BASE_ADDRESS
+	hex "SST39FV bass address"
+	default 0x00000000
+	---help---
+		This is the address where the SST29VF FLASH can be found in memory.
+
+endif
 
 config MTD_W25
 	bool "SPI-based W25 FLASH"
 	default n
 	select SPI
 
+if MTD_W25
+
 config W25_SPIMODE
 	int "W25 SPI Mode"
 	default 0
-	depends on MTD_W25
 
 config W25_SPIFREQUENCY
 	int "W25 SPI Frequency"
 	default 20000000
-	depends on MTD_W25
 
 config W25_READONLY
 	bool "W25 Read-Only FLASH"
 	default n
-	depends on MTD_W25
 
 config W25_SECTOR512
 	bool "Simulate 512 byte Erase Blocks"
 	default n
-	depends on MTD_W25
 
 config W25_SLOWREAD
 	bool
 	default n
-	depends on MTD_W25
+
+endif
