@@ -49,6 +49,10 @@ ifeq ($(CONFIG_MTD_SST25),y)
 CSRCS += sst25.c
 endif
 
+ifeq ($(CONFIG_MTD_SST39FV),y)
+CSRCS += sst39vf.c
+endif
+
 ifeq ($(CONFIG_MTD_W25),y)
 CSRCS += w25.c
 endif
